--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "embassy-dht"
 version = "0.1.0"
 edition = "2021"
 keywords = ["dht11", "dht22", "embassy",  "no_std"]
+description = " This Rust library provides an interface for interacting with DHT1X and DHT2X temperature and humidity sensors using the Embassy framework."
 repository = "https://github.com/sndnvaps/embassy-dht"
 authors = ["Samuel Freeman <admin@sndnvaps.com>"]
 documentation = "https://docs.rs/embassy-dht"
