--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "embassy-dht"
 version = "0.1.6"
 edition = "2021"
-keywords = ["dht11", "dht22", "embassy",  "no_std", "RP2040","RP2350"]
+keywords = ["DHTXX", "embassy",  "no_std", "RP2040","RP2350"]
 description = " This Rust library provides an interface for interacting with DHT1X and DHT2X temperature and humidity sensors using the Embassy framework."
 repository = "https://github.com/sndnvaps/embassy-dht"
 authors = ["Samuel Freeman <admin@sndnvaps.com>"]
