--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "embassy-dht"
-version = "0.1.6"
+version = "0.1.7"
 edition = "2021"
-keywords = ["DHTXX", "embassy",  "no_std", "RP2040","RP2350"]
+keywords = ["DHTXX", "embassy",  "no_std", "RP2040", "RP2350"]
 description = " This Rust library provides an interface for interacting with DHT1X and DHT2X temperature and humidity sensors using the Embassy framework."
 repository = "https://github.com/sndnvaps/embassy-dht"
 authors = ["Samuel Freeman <admin@sndnvaps.com>"]
@@ -13,3 +13,6 @@ license = "MIT/Apache-2.0"
 embedded-hal = { version = "1.0.0" }
 embassy-rp = { version = "0.2.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
 num-traits = { version = "0.2", default-features= false }
+
+[features]
+embedded_alloc = []
