--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "embassy-dht"
-version = "0.1.8"
+version = "0.2.0"
 edition = "2021"
 keywords = ["DHTXX", "embassy",  "no_std", "RP2040", "RP2350"]
 description = " This Rust library provides an interface for interacting with DHT1X and DHT2X temperature and humidity sensors using the Embassy framework."
@@ -11,8 +11,12 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 embedded-hal = { version = "1.0.0" }
-embassy-rp = { version = "0.2.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
+embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"], optional = true }
+embassy_rp_main = { package = "embassy-rp", version = "0.2.0",  git="https://github.com/embassy-rs/embassy", branch="main",features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] ,optional = true}
 num-traits = { version = "0.2", default-features= false }
 
 [features]
+default = ["rp2350"]
 embedded_alloc = []
+rp2040 = ["dep:embassy-rp"]
+rp2350 = ["dep:embassy_rp_main"]
