--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/sndnvaps/embassy-dht"
 authors = ["Samuel Freeman <admin@sndnvaps.com>"]
 documentation = "https://docs.rs/embassy-dht"
 license = "MIT/Apache-2.0"
+categories = ["hardware-support", "no-std", "embedded"]
 
 [package.metadata.embassy_dht_docs]
 flavors = [
